<?xml version="1.0"?>
<package format="3">
  <name>zed_slam_bringup</name>
  <version>0.1.0</version>
  <description>ZED 2i + RTAB-Map SLAM bringup tuned for Jetson Orin Nano</description>
  <maintainer email="soham@fliight.com.au">soham</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>zed_wrapper</exec_depend>
  <exec_depend>rtabmap_ros</exec_depend>
  <exec_depend>rtabmap_slam</exec_depend>
  <exec_depend>rtabmap_viz</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
